2002-06-07  Michal Ludvig  <mludvig@suse.cz>
	Merge from mainline:

	2002-05-27  Michal Ludvig  <mludvig@suse.cz>

		* x86-64-tdep.c (x86_64_skip_prologue): Remove obsolete
		note. Let PC point right after the prologue before looking
		up symbols.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,13 @@
+2002-06-07  Michal Ludvig  <mludvig@suse.cz>
+
+	Merge from mainline:
+
+	2002-05-27  Michal Ludvig  <mludvig@suse.cz>
+
+		* x86-64-tdep.c (x86_64_skip_prologue): Remove obsolete 
+		note. Let PC point right after the prologue before looking 
+		up symbols.
+
 2002-05-28  Theodore A. Roth  <troth@verinet.com>
 
 	* Makefile.in: Add support for AVR target.
