--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-17  Christopher Faylor  <cgf@alum.bu.edu>
 
+	* tty.cc (tty_list::init): Move hmaster initialization earlier to
+	prevent compilation error.
+
+2004-05-17  Christopher Faylor  <cgf@alum.bu.edu>
+
 	Change the name "title_mutex" to "tty_mutex" throughout.
 	* tty.h (tty_list::allocate_tty): Turn argument into a boolean.
 	* tty.cc (tty_list::init): Protect entire allocation operation with
