--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-17  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/include/grp.h: Declare getgrnam_r and getgrgid_r also on Cygwin.
+
 2004-05-11  Artem B. Bityuckiy  <abitytsky@softminecorp.com>
 
 	* libc/stdio/vfprintf.c (VFPRINTF_R): Use _free_r instead
