--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>
 
+	* winbase.h: Semi-revert previous patch as it caused strange behavior.
+	Use syntax similar to that recommended in mingw-dvlpr.
+
+2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>
+
 	* include/cygwin/version.h: Bump DLL minor number to 11.
 
 2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>
