--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-25  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* testsuite/include/check.h: Add include of <stdio.h>.
+
 2004-05-17  Corinna Vinschen  <corinna@vinschen.de>
 
 	* libc/include/grp.h: Declare getgrnam_r and getgrgid_r also on Cygwin.
