--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-26  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/search/hash_buf.c: Protect MAX and MIN macros from
+	redefinition.
+	* libc/search/hash.c: Ditto.
+
 2004-05-25  Artem B. Bityuckiy  <abitytsky@softminecorp.com>
 
 	* newlib.hin: (_WANT_IO_POS_ARGS): New define.
