--- a/libgloss/ChangeLog
+++ b/libgloss/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-26  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libnosys/sbrk.c: Add include of <_syslist.h>.
+
 2004-05-05  Richard Sandiford  <rsandifo@redhat.com>
 
 	* mips/array.ld, mips/cfe.ld, mips/ddb-kseg0.ld, mips/ddb.ld,
