--- a/libgloss/ChangeLog
+++ b/libgloss/ChangeLog
@@ -1,6 +1,6 @@
 2004-05-26  Jeff Johnston  <jjohnstn@redhat.com>
 
-	* libnosys/sbrk.c: Add include of <_syslist.h>.
+	* libnosys/sbrk.c: Add include of <_syslist.h> and "config.h".
 
 2004-05-05  Richard Sandiford  <rsandifo@redhat.com>
 
