--- a/winsup/utils/ChangeLog
+++ b/winsup/utils/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-27  Christopher Faylor  <cgf@alum.bu.edu>
+
+	* kill.cc (listsig): NSIG includes Signal 0, so we need to avoid
+	calling strtosigno with NSIG - 1.
+
 2004-03-21  Christopher Faylor  <cgf@redhat.com>
 
 	* cygcheck.cc (dump_sysinfo): Remove "Win95/NT" from output.
