--- a/gdb/gdbtk/ChangeLog
+++ b/gdb/gdbtk/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-27  Martin Hunt  <hunt@redhat.com>
+
+	* library/tdump.tcl (build_win): Remove old nonworking
+	code to select scrolledtext mode.  Just use "dynamic".
+
 2004-04-22  Keith Seitz  <kseitz@sources.redhat.com>
 
 	* generic/gdbtk-hooks.c (gdbtk_add_hooks): "Update" deprecated hooks.
