--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-28  Pierre Humblet  <Pierre.Humblet@ieee.org>
+
+	* path.cc (chdir): Always use the normalized_path as posix_cwd, except
+	if it starts with a drive.
+
 2004-05-25  Christopher Faylor  <cgf@alum.bu.edu>
 
 	* winbase.h: Semi-revert previous patch as it caused strange behavior.
