--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-02  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/stdio/vfscanf.c (__svfscanf_r): For CT_INT conversions,
+	reset digit flags appropriately after we have discovered "0x".
+	* libc/machine/powerpc/vfscanf.c (__svfscanf_r): Ditto.
+
 2004-05-27  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* libc/stdio/vfprintf.c (_VFPRINTF): Move file locking
