--- a/libgloss/ChangeLog
+++ b/libgloss/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-03  Alexandre Oliva  <aoliva@redhat.com>
+
+        * mn10300/sim.ld: Start at address 4, to avoid ambiguity with NULL
+        pointers.
+
 2004-05-26  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* libnosys/sbrk.c: Add include of <_syslist.h> and "config.h".
