--- a/dejagnu/ChangeLog
+++ b/dejagnu/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-08  Alexandre Oliva  <aoliva@redhat.com>
+
+	* baseboards/mn10300-sim.exp: Set needs_status_wrapper and
+	noresults to zero.
+
 2004-05-13  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
 
 	* baseboards/m32r-linux-sim.exp: Add New file.
