--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-09  Christopher Faylor  <cgf@alum.bu.edu>
+
+	* include/cygwin/version.h: REALLY bump dll minor version to 11.
+
 2004-06-08  Egor Duda <deo@corpit.ru>
 
 	* include/cygwin/ipc.h: Make IPC_INFO visible only for ipc system
