--- a/gdb/gdbtk/ChangeLog
+++ b/gdb/gdbtk/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* generic/gdbtk-cmds.c (gdb_load_info): Use bfd_get_section_size
+	instead of bfd_get_section_size_before_reloc.
+
 2004-06-11  Martin Hunt  <hunt@redhat.com>
 
 	* generic/gdbtk-cmds.c (gdb_find_file_command): Use
